加入2个广告位

--- a/pages/introduction/intr3.wxml
+++ b/pages/introduction/intr3.wxml
@@ -24,5 +24,5 @@
   <text class="main-text">内倾感觉型简称 Si。这种人爱好艺术，沉浸在自我主观感觉中，与自己的内心世界相比，他们觉得外部世界索然乏味。这种类型的大多数人表现得较为沉静、随和，有一定的自制力，但思维和情感大都不够深沉。</text>
   <text class="main-text">外倾直觉型 Ne。这种人异想天开，喜怒无常，见异思迁，好高鹜远，一个问题没解决又忙于解决另一个问题，不能持之以恒，由于情感转移快，难得知己。</text>
   <text class="main-text">内倾直觉型 Ni。这种人往往是能产生一些新奇观念的梦想家，别人看他们不可思议，而他们自己却自视甚高，自以为是不被理解的天才。Ni 是原始意象的内在联系，它使得主体通过直觉获得了事物的本质认识，从而能够还原过去和预测将来的变化。他们可以在封闭的环境中、在仅获得少量情报的情况下顿悟出事物的答案，并且对未来即将发生的变化而感到兴奋。</text>
-
+  <ad unit-id="adunit-6922803f9903a168" style="margin-top:10rpx;"></ad>
 </view>
