--- a/app.wxss
+++ b/app.wxss
@@ -4,7 +4,5 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
-  padding: 170rpx 0;
-  box-sizing: border-box;
+  justify-content: space-around;
 } 
