--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,17 +1,19 @@
 <!--index.wxml-->
 <view class="container">
-  <view class="userinfo">
-    <!--
-  <view  bindtap="bindViewTap" class="userinfo">
-  这里原来是这么写的，点击userinfo会跳转到logs页面
-  -->
-    <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-    <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-  </view>
+
   <view class="usermotto">
     <text class="user-motto1">{{motto1}}</text>
     <text class="user-motto2">{{motto2}}</text>
     <text class="user-motto3">{{motto3}}</text>
-    <image bindtap="goToIntr" src='/img/arrow-right.png' style='width:16px;height:16px;'/>
+    <!-- <image bindtap="goToIntr" src='/img/arrow-right.png' style='width:16px;height:16px;' /> -->
   </view>
+
+    <view class="userinfo">
+    <view class="userinfo-avatar">
+      <open-data type="userAvatarUrl" />
+    </view>
+    <open-data type="userNickName" class="userinfo-nickname" />
+    <button bindgetuserinfo="goToIntr" open-type='getUserInfo' class="userinfo-button" size='mini'>{{buttonText}}</button>
+  </view>
+
 </view>
