--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -17,8 +17,12 @@
   color: #aaa;
 }
 
+.userinfo-button{
+  margin-top: 40rpx; 
+}
+
 .usermotto {
-  margin-top: 120rpx;
+  margin-top: 160rpx;
   display: flex;
   flex-direction: column;
   align-items: center;
